--- a/cloud-init.yml
+++ b/cloud-init.yml
@@ -119,22 +119,26 @@ write_files:
           br_netfilter  
     - path: /etc/sysctl.d/99-k8s.conf
       content: |
-          net.bridge.bridge-nf-call-iptables  = 1
-          net.bridge.bridge-nf-call-ip6tables = 1
+        net.ipv4.ip_forward=1
+        net.ipv6.conf.all.forwarding=1
+        net.bridge.bridge-nf-call-iptables  = 1
+        net.bridge.bridge-nf-call-ip6tables = 1
     - path: /tmp/kubeadm-config.yaml
       content: |
-        # kubeadm-config.yaml
         kind: ClusterConfiguration
         apiVersion: kubeadm.k8s.io/v1beta3
-        kubernetesVersion: v1.21.0
+        kubernetesVersion: v1.28.0
         ---
         kind: KubeletConfiguration
         apiVersion: kubelet.config.k8s.io/v1beta1
         cgroupDriver: systemd
 runcmd:
+    - modprobe overlay
+    - modprobe br_netfilter
+    - sysctl --system
     - mkdir /etc/containerd
     - containerd config default | tee /etc/containerd/config.toml
     - sed -i 's/SystemdCgroup \= false/SystemdCgroup \= true/g' /etc/containerd/config.toml
     - systemctl daemon-reload
     - systemctl enable --now containerd
-    - kubeadm init --config kubeadm-config.yaml
+    - kubeadm init --config /tmp/kubeadm-config.yaml
